# tetris-clone

./: .gitignore  README.md  build_docs.sh  pyproject.toml
docs/source/: conf.py  index.rst  tetris.assets.audio.rst  tetris.assets.gfx.rst  tetris.assets.rst  tetris.event.rst  tetris.rst  tetris.state.rst
src/tetris/: __main__.py  game.py  playfield.py  state.py
tetris/: game_state.py  main.py  tetris.py
tetris/event/: game_event.py
tetris/state/: game_state.py
