[tool.poetry]
name = "tetris-clone"
version = "0.1.0"
description = "A clone of the classic video game Tetris."
authors = ["Julianne Adams <julianne@julianneadams.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"
transitions = "^0.9.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
sphinx = "^7.0.1"
furo = "^2023.5.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
